# eyecu

./: .gitignore  README.md  requirements.txt
eyecu/: CMakeLists.txt  package.xml
eyecu/config/: lmksdf.py  logitech_webcam_calibration.yaml  logitech_webcam_calibration_1280.yaml  logitech_webcam_calibration_640.yaml  track.yaml  webcam_calibration.yaml
eyecu/include/: eyecu_node.h  eyecu_node_dlib.h
eyecu/include/laser_projection/: laser_image_projection.h
eyecu/include/pointcloud_projection/: pointcloud_image_projection.h
eyecu/launch/: apriltag_tracking.launch  arduino_connect.launch  eyecu_emotion.launch  eyecu_tensorflow.launch  eyecu_tensorflow_standalone.launch  start_dynamixel_tracking.launch  start_dynamixel_tracking_emotion.launch  start_dynamixel_tracking_tensorflow.launch  start_tracking.launch  start_usb_cam.launch  static_transforms.launch.xml
eyecu/launch/face_tracking/: eyecu_opencv.launch
eyecu/launch/sensors/: VLP16_points.launch  calibrate_camera.launch  start_usb_cam.launch
eyecu/launch/transforms/: static_transforms.launch.xml
eyecu/launch/usb_cam/: start_usb_cam.launch
eyecu/src/: apriltag_to_face_distance.cpp  eyecu_node.cpp  eyecu_node_dlib.cpp  laser_image_projection.cpp  pointcloud_image_projection.cpp
eyecu_control/: CMakeLists.txt  package.xml
eyecu_control/config/: left_eye.yaml  servo_param.yaml
eyecu_control/include/: eyecu_control.h  motor_state_broadcaster.h
eyecu_control/launch/: start_dynamixel.launch  start_eye_controller.launch
eyecu_control/src/: eyecu_control.cpp  motor_state_broadcaster.cpp
eyecu_emotion/: CMakeLists.txt  package.xml
eyecu_emotion/scripts/: emojiObject.py  emotionDetector.py  emotion_detect_average.py  test.py
eyecu_firmware/Neopixel_ring/: Neopixel_ring.ino
eyecu_firmware/neopixel_ring/: neopixel_ring.ino
eyecu_hardware_rule/: 20-eye-devices.rules  setRule.sh
eyecu_msgs/: CMakeLists.txt  package.xml
eyecu_msgs/msg/: boundingBox.msg  boundingBoxArray.msg
eyecu_msgs/srv/: SoundProcedence.srv
eyecu_tensorflow/: CMakeLists.txt  package.xml
eyecu_tensorflow/labels/: label_map.pbtxt
eyecu_tensorflow/scripts/: eyecu_tensorflow.py  eyecu_tensorflow_standalone.py  object_detection.py
face_tracker_control/: CMakeLists.txt  package.xml
face_tracker_control/config/: left_eye.yaml  right_eye.yaml
face_tracker_control/include/: face_tracker_control.h  motor_state_broadcaster.h
face_tracker_control/launch/: start_dynamixel.launch  start_eye_controller.launch
face_tracker_control/src/: face_tracker_control.cpp  face_tracker_controller.cpp  face_tracker_controller_v2.cpp  motor_state_broadcaster.cpp
face_tracker_pkg/: CMakeLists.txt  package.xml
face_tracker_pkg/config/: track.yaml  webcam_calibration.ini  webcam_calibration.yaml
face_tracker_pkg/include/: face_tracker_node_dlib.h  face_tracker_node_v2.h
face_tracker_pkg/launch/: start_dynamixel_tracking.launch  start_dynamixel_tracking_tensorflow.launch  start_tracking.launch  start_tracking_tensorflow.launch  start_usb_cam.launch  static_transforms.launch.xml
face_tracker_pkg/msg/: DistanceCamera.msg
face_tracker_pkg/src/: face_tracker_node.cpp  face_tracker_node_dlib.cpp  face_tracker_node_v2.cpp
face_tracker_tensorflow/: CMakeLists.txt  package.xml
face_tracker_tensorflow/scripts/: face_tracker_tensorflow.py  face_tracker_tensorflow_standalone.py  object_detection.py  test.py
